--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,11 @@
 FROM ubuntu:noble
 
-RUN apt-get update && apt-get install -y python3 python3.12-venv git && \
+RUN apt-get update && apt-get install -y python3 python3.12-venv curl git && \
+    curl -fsSL https://ollama.com/install.sh | sh && \
     rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt /tmp/requirements.txt
+
+RUN python3 -m venv /opt/venv && \
+    . /opt/venv/bin/activate && \
+    pip3 install -r /tmp/requirements.txt
