--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-mcp == 1.10.1
-dotenv == 0.9.9
-google-genai
+mcp >= 1.10.1
+dotenv >= 0.9.9
+langchain-ollama>=0.3.2
+langchain-google-genai>=2.1.6
+mcp_use >= 1.3.3
