--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:noble
 
-RUN apt-get update && apt-get install -y python3 python3.12-venv curl git && \
+RUN apt-get update && apt-get install -y python3 python3.12-venv curl git plantuml && \
     curl -fsSL https://ollama.com/install.sh | sh && \
     rm -rf /var/lib/apt/lists/*
 
