--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 mcp >= 1.10.1
 dotenv >= 0.9.9
-langchain-ollama>=0.3.2
-langchain-google-genai>=2.1.6
+langchain-ollama >= 0.3.2
+langchain-google-genai >= 2.1.6
 mcp_use >= 1.3.3
+grpcio-tools >= 1.73.1
+aiofiles >= 24.1.0
+fastmcp >= 2.10.2
