--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,10 +11,15 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
-				"jebbs.plantuml"
+				"jebbs.plantuml",
+				"ms-python.black-formatter"
 			],
 			"settings": {
 				"python.defaultInterpreterPath": "/opt/venv/bin/python",
+				"[python]": {
+					"editor.formatOnSave": true,
+					"editor.defaultFormatter": "ms-python.black-formatter"
+				},
 				"terminal.integrated.env.linux": {
 					"PYTHONPATH": "/workspaces/learning-mcp/src:/workspaces/learning-mcp/src/grpc_client"}
 				}
